@@ -1,6 +1,6 @@
 Source: coredns
 Maintainer: Miek Gieben <miek@coredns.io>
-Build-Depends: debhelper (>= 9), ca-certificates, curl, dh-systemd, lsb-release, jq
+Build-Depends: debhelper (>= 9), ca-certificates, curl, dh-systemd, dh-sysuser, lsb-release, jq
 
 Package: coredns
 Architecture: any
