@@ -1,6 +1,6 @@
 Source: k3s
 Maintainer: Miek Gieben <miek@miek.nl>
-Build-Depends: debhelper (>= 9), ca-certificates, dh-systemd, lsb-release
+Build-Depends: debhelper (>= 9), ca-certificates, dh-systemd, dh-sysuser, lsb-release
 
 Package: k3s
 Architecture: any
