@@ -1,6 +1,6 @@
 Source: kubectl
 Maintainer: Miek Gieben <miek@miek.nl>
-Build-Depends: debhelper (>= 9), ca-certificates, lsb-release
+Build-Depends: debhelper (>= 9), ca-certificates, lsb-release, dh-sysuser
 
 Package: kubectl
 Architecture: any
