@@ -6,7 +6,7 @@ PACKAGEVERSION  := $(VERSION)-0~$(DISTRIBUTION)0
 
 %:
 	dh_clean
-	dh $@
+	dh $@ --with sysuser
 
 override_dh_strip:
 	echo dh_strip
